# jwtlet

./: .dockerignore  Cargo.toml  README.md
crates/jwtlet-core/: Cargo.toml
crates/jwtlet-core/src/: lib.rs
crates/jwtlet-core/src/k8s/: mod.rs  renewal.rs
crates/jwtlet-core/src/k8s/tests/: mod.rs  renewal.rs
crates/jwtlet-core/src/resource/: mem.rs  mod.rs
crates/jwtlet-core/src/resource/tests/: mem.rs  mod.rs  resource_service.rs
crates/jwtlet-core/src/saccount/: mod.rs
crates/jwtlet-core/src/saccount/tests/: mod.rs
crates/jwtlet-core/src/token/: mod.rs
crates/jwtlet-core/src/token/tests/: mod.rs
crates/jwtlet-server/: Cargo.toml  Dockerfile  Dockerfile.test
crates/jwtlet-server/src/: lib.rs  main.rs
crates/jwtlet-server/src/assembly/: mod.rs
crates/jwtlet-server/src/config/: mod.rs
crates/jwtlet-server/src/config/tests/: mod.rs
crates/jwtlet-server/src/exchange/: error.rs  mod.rs
crates/jwtlet-server/src/management/: error.rs  mod.rs
crates/jwtlet-server/src/server/: mod.rs
docs/: security-architecture.md  token-exchange-threat-model.md
e2e/: Cargo.toml  Makefile
e2e/manifests/: jwtlet-config.yaml  jwtlet-deployment.yaml  jwtlet-service.yaml  namespace.yaml  service-accounts.yaml  vault-agent-config.yaml  vault-deployment.yaml
e2e/scripts/: build-and-load-jwtlet.sh  cleanup.sh  configure-vault.sh  run-tests.sh  setup.sh  verify-setup.sh
e2e/src/: lib.rs
e2e/src/fixtures/: jwtlet.rs  mod.rs  vault.rs
e2e/src/tests/: mod.rs  token_exchange.rs
e2e/src/utils/: kubectl.rs  mod.rs
(+2 files in other folders)
