[package]
name = "jwtlet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dsdk-facet-core = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true
